--- a/p8105_hw2_xj2249.md
+++ b/p8105_hw2_xj2249.md
@@ -44,8 +44,47 @@ in a dumpster in 2017?
 
 # Problem 2
 
-## Clean the data in pols-month
+## First, clean the data in pols-month.csv
 
 ``` r
-pols_month <- read_csv("./data/fivethirtyeight_datasets/pols-month.csv")
+pols <- 
+        read_csv("./data/fivethirtyeight_datasets/pols-month.csv") %>%
+        separate(mon,into = c("year","month","day"), sep = "-", convert = TRUE) %>% 
+        mutate(month = month.name[month],
+               president = ifelse(prez_dem == 1,"dem","gop")) %>%
+        select(-c("prez_dem","prez_gop","day"))
 ```
+
+## Second, clean the data in snp.csv
+
+``` r
+snp <- 
+        read_csv("./data/fivethirtyeight_datasets/snp.csv") %>%
+        separate(date,into = c("month","day","year"), sep = "/", convert = TRUE) %>% 
+        select("year","month","close") %>% 
+        arrange(year,month) %>% 
+        mutate(month = month.name[month])
+```
+
+## Third, tidy the unemployment data
+
+This process will involve switching from “wide” to “long” format;
+ensuring that key variables have the same name; and ensuring that key
+variables take the same values.
+
+``` r
+unemployment <- 
+        read_csv("./data/fivethirtyeight_datasets/unemployment.csv") %>%
+        janitor::clean_names() %>% 
+        pivot_longer("jan":"dec", names_to = "month",values_to = "umemployment_%") %>% 
+        mutate(month = month.name[match(month,tolower(month.abb))])
+```
+
+## Join the datasets by merging snp into pols, and merging unemployment into the result.
+
+``` r
+pol_snp <- left_join(pols,snp,by = c("year", "month"))
+pol_snp_unemp <- left_join(pol_snp,unemployment,by = c("year", "month"))
+```
+
+# Problem 3
