--- a/p8105_hw2_xj2249.md
+++ b/p8105_hw2_xj2249.md
@@ -68,9 +68,9 @@ snp <-
 
 ## Third, tidy the unemployment data
 
-This process will involve switching from “wide” to “long” format;
-ensuring that key variables have the same name; and ensuring that key
-variables take the same values.
+This process will involve switching from ???wide??? to ???long???
+format; ensuring that key variables have the same name; and ensuring
+that key variables take the same values.
 
 ``` r
 unemployment <- 
@@ -88,3 +88,17 @@ pol_snp_unemp <- left_join(pol_snp,unemployment,by = c("year", "month"))
 ```
 
 # Problem 3
+
+``` r
+baby_name <- read_csv("./data/Popular_Baby_Names.csv") 
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   `Year of Birth` = col_double(),
+    ##   Gender = col_character(),
+    ##   Ethnicity = col_character(),
+    ##   `Child's First Name` = col_character(),
+    ##   Count = col_double(),
+    ##   Rank = col_double()
+    ## )
