--- a/p8105_hw2_xj2249.Rmd
+++ b/p8105_hw2_xj2249.Rmd
@@ -80,9 +80,57 @@ pol_snp_unemp <- left_join(pol_snp,unemployment,by = c("year", "month"))
 
 
 # Problem 3
+## Load and tidy the data
 ```{r}
-baby_name <- read_csv("./data/Popular_Baby_Names.csv") 
+baby_name <- 
+        read_csv("./data/Popular_Baby_Names.csv") %>% 
+        janitor::clean_names() %>% 
+        mutate(childs_first_name = str_to_title(childs_first_name),
+               ethnicity = str_to_sentence(recode(ethnicity, "ASIAN AND PACIFIC ISLANDER" = "ASIAN AND PACI",
+                                                                "BLACK NON HISPANIC" = "BLACK NON HISP",
+                                                                        "WHITE NON HISPANIC" = "WHITE NON HISP"))) %>% 
+        distinct(.keep_all = TRUE) %>% 
+        view()
 
+```
+
+
+## Creat table for "¡°Olivia¡±
+```{r, message = FALSE}
+library(knitr)
+pop_olivia <- 
+        baby_name %>% 
+        filter(childs_first_name == "Olivia") %>% 
+        select("year_of_birth","ethnicity","rank") %>% 
+        pivot_wider(names_from = year_of_birth, values_from = rank ) %>% 
+        select("ethnicity","2011","2012","2013","2014","2015","2016")
+
+kable(pop_olivia) 
+
+
+# Finally, for male, white non-hispanic children born in 2016, produce a scatter plot showing the number of children with a name (y axis) against the rank in popularity of that name (x axis).
+
+
+```
+
+## The most popular name among male children over time.
+```{r}
+pop_male_name <- 
+        baby_name %>% 
+        filter(gender == "MALE" & rank == 1) %>% 
+        select(year_of_birth, ethnicity, childs_first_name) %>% 
+        pivot_wider(names_from = year_of_birth, values_from = childs_first_name ) %>% 
+        select("ethnicity","2011","2012","2013","2014","2015","2016") 
+kable(pop_male_name)
+```
+
+## A scatter plot 
+```{r}
+baby_name %>%
+        filter(gender == "MALE" & year_of_birth == 2016 & ethnicity == "White non hisp") %>% 
+        ggplot(aes(x = rank, y = count)) + 
+        geom_text(aes(label = childs_first_name),hjust = 0, vjust = 0,size = 3) +
+        geom_point(position = "jitter",alpha = 0.25, size = 1) 
 
 ```
 
