--- a/p8105_hw2_xj2249.md
+++ b/p8105_hw2_xj2249.md
@@ -1,6 +1,6 @@
 p8105\_hw2\_xj2249
 ================
-jx
+jx2249
 2019/9/24
 
 # Problem 1
@@ -9,41 +9,57 @@ jx
 
 ``` r
 library(tidyverse)
-mr_trash <- readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
+mr_trash <- 
+        readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                                sheet = "Mr. Trash Wheel",
                                range = "A2:N336") %>% 
         janitor::clean_names() %>% 
-        drop_na(date) %>% 
+        drop_na(dumpster) %>% 
         mutate(sports_balls = as.integer(sports_balls))
 ```
 
 ## Read and clean precipitation data for 2017 and 2018
 
 ``` r
-pre_18 <- readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
+pct_18 <- 
+        readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                              sheet = "2018 Precipitation",
                              range = "A2:B14") %>% 
         janitor::clean_names() %>% 
         drop_na(total) %>% 
         mutate(year = "2018")
-pre_17 <- readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
+
+pct_17 <- 
+        readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                              sheet = "2017 Precipitation",
                              range = "A2:B14") %>% 
         janitor::clean_names() %>% 
         drop_na(total) %>% 
         mutate(year = "2017")
-pre_17_18 <- rbind(pre_18,pre_17) %>% 
+
+pct_17_18 <- 
+        rbind(pct_18,pct_17) %>% 
         mutate(month = month.name[month])
 ```
 
 Write a paragraph about these data; you are encouraged to use inline R.
+
 Be sure to note the number of observations in both resulting datasets,
 and give examples of key variables.
 
-For available data, what was the total precipitation in 2018?
+What was the median number of sports balls in a dumpster in 2017? done
 
-What was the median number of sports balls in a dumpster in 2017? The
-median number of sports balls in a dumpster in 2017 is 8
+The median number of sports balls in a dumpster in 2017 is 8
+
+## Mr. Trash Wheel dataset
+
+In Mr. Trash Wheel dataset, there are ‘285’ observations.
+
+In precipitation(2017-2018) dataset, there are 19 observations, with 3
+variables, indicating the total precipitation data for 19 months in 2017
+and 2018. The total precipitation in 2017 and 2018 are 32.93 and 23.5
+respectively. Besides, the average precipitation in 2017 and 2018 are
+2.74 and 3.36 respectively.
 
 # Problem 2
 
@@ -90,6 +106,10 @@ pol_snp <- left_join(pols,snp,by = c("year", "month"))
 pol_snp_unemp <- left_join(pol_snp,unemployment,by = c("year", "month"))
 ```
 
+Write a short paragraph about these datasets. Explain briefly what each
+dataset contained, and describe the resulting dataset (e.g. give the
+dimension, range of years, and names of key variables).
+
 # Problem 3
 
 ## Load and tidy the data
@@ -101,7 +121,9 @@ baby_name <-
         mutate(childs_first_name = str_to_title(childs_first_name),
                ethnicity = str_to_sentence(recode(ethnicity, "ASIAN AND PACIFIC ISLANDER" = "ASIAN AND PACI",
                                                                 "BLACK NON HISPANIC" = "BLACK NON HISP",
-                                                                        "WHITE NON HISPANIC" = "WHITE NON HISP"))) %>% 
+                                                                        "WHITE NON HISPANIC" = "WHITE NON HISP")),
+               gender = str_to_title(gender)
+               ) %>% 
         distinct(.keep_all = TRUE) %>% 
         view()
 ```
@@ -119,15 +141,13 @@ baby_name <-
 ## Creat table for ““Olivia”
 
 ``` r
-library(knitr)
 pop_olivia <- 
         baby_name %>% 
         filter(childs_first_name == "Olivia") %>% 
         select("year_of_birth","ethnicity","rank") %>% 
         pivot_wider(names_from = year_of_birth, values_from = rank ) %>% 
         select("ethnicity","2011","2012","2013","2014","2015","2016")
-
-kable(pop_olivia) 
+knitr::kable(pop_olivia) 
 ```
 
 | ethnicity      | 2011 | 2012 | 2013 | 2014 | 2015 | 2016 |
@@ -141,16 +161,20 @@ kable(pop_olivia)
 # Finally, for male, white non-hispanic children born in 2016, produce a scatter plot showing the number of children with a name (y axis) against the rank in popularity of that name (x axis).
 ```
 
+Finally, for male, white non-hispanic children born in 2016, produce a
+scatter plot showing the number of children with a name (y axis) against
+the rank in popularity of that name (x axis).
+
 ## The most popular name among male children over time.
 
 ``` r
 pop_male_name <- 
         baby_name %>% 
-        filter(gender == "MALE" & rank == 1) %>% 
+        filter(gender == "Male" & rank == 1) %>% 
         select(year_of_birth, ethnicity, childs_first_name) %>% 
         pivot_wider(names_from = year_of_birth, values_from = childs_first_name ) %>% 
         select("ethnicity","2011","2012","2013","2014","2015","2016") 
-kable(pop_male_name)
+knitr::kable(pop_male_name) 
 ```
 
 | ethnicity      | 2011    | 2012   | 2013   | 2014   | 2015   | 2016   |
@@ -164,10 +188,12 @@ kable(pop_male_name)
 
 ``` r
 baby_name %>%
-        filter(gender == "MALE" & year_of_birth == 2016 & ethnicity == "White non hisp") %>% 
+        filter(gender == "Male" & year_of_birth == 2016 & ethnicity == "White non hisp") %>% 
         ggplot(aes(x = rank, y = count)) + 
+        geom_point(position = "jitter",alpha = 0.25, size = 1) +
         geom_text(aes(label = childs_first_name),hjust = 0, vjust = 0,size = 3) +
-        geom_point(position = "jitter",alpha = 0.25, size = 1) 
+        labs(title = "Rank and count of male names in white non-hispanic children") +
+        theme(plot.title = element_text(hjust = 0.5))
 ```
 
 ![](p8105_hw2_xj2249_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
