--- a/p8105_hw2_xj2249.Rmd
+++ b/p8105_hw2_xj2249.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "p8105_hw2_xj2249"
-author: "jx2249" 
+author: "jx2249"  
+
 date: "2019/9/24"
 output: github_document
 ---
@@ -42,28 +43,15 @@ pct_17_18 <-
 ```
 
 
-Write a paragraph about these data; you are encouraged to use inline R. 
-
-Be sure to note the number of observations in both resulting datasets, and give examples of key variables. 
-
-
-What was the median number of sports balls in a dumpster in 2017?  done 
-
-The median number of sports balls in a dumpster in 2017 is  `r median(pull(filter(mr_trash,year == 2017),sports_balls))`
-
-
-## Mr. Trash Wheel dataset
-In Mr. Trash Wheel dataset, there are '`r nrow(mr_trash)`' observations.
-
-
-In precipitation(2017-2018) dataset,  there are `r nrow(pct_17_18)` observations, with 3 variables, indicating
-the total precipitation data for 19 months in 2017 and 2018. 
-The total precipitation in 2017 and 2018 are `r sum(pull(filter(pct_17_18,year == 2017),total))` 
-and `r sum(pull(filter(pct_17_18,year == 2018),total))` respectively. Besides, the average precipitation in 2017 and 2018 are 
-`r round(mean(pull(filter(pct_17_18,year == 2017),total)), digits=2) ` 
-and `r round(mean(pull(filter(pct_17_18,year == 2018),total)), digits=2)` respectively.
-
-
+```{r, results="hide", echo=FALSE}
+skimr::skim(mr_trash)
+```
+* In "Mr. Trash Wheel" dataset, there are 285 observations, embodying information on the dumpter number, date of collection, amount of total litter and litter type.
+* It contains information of 285 dumpsters dating from 2014 to 2018. The average litter weight and volume are 3.33 tons/year and 15 cubic yards/year.
+* And the median number of sports balls in a dumpster in 2017 is  `r median(pull(filter(mr_trash,year == 2017),sports_balls))`.
+* In "precipitation(2017-2018)" dataset,  there are `r nrow(pct_17_18)` observations, with 3 variables, showing the total precipitation data for 19 months in 2017 and 2018. 
+* The total precipitation in 2017 and 2018 are `r sum(pull(filter(pct_17_18,year == 2017),total))`
+and `r sum(pull(filter(pct_17_18,year == 2018),total))` respectively. Besides, the average precipitation in 2017 and 2018 are `r round(mean(pull(filter(pct_17_18,year == 2017),total)), digits=2) ` and `r round(mean(pull(filter(pct_17_18,year == 2018),total)), digits=2)` respectively.
 
 
 # Problem 2
@@ -89,8 +77,7 @@ snp <-
         
 ```
 
-## Third, tidy the unemployment data 
-This process will involve switching from ???wide??? to ???long??? format; ensuring that key variables have the same name; and ensuring that key variables take the same values.
+## Third, tidy the unemployment data.
 ```{r, message = FALSE}
 unemployment <- 
         read_csv("./data/fivethirtyeight_datasets/unemployment.csv") %>%
@@ -99,19 +86,32 @@ unemployment <-
         mutate(month = month.name[match(month,tolower(month.abb))])
 ```
 
-## Join the datasets by merging snp into pols, and merging unemployment into the result.
+## Finally, join the datasets.
 ```{r}
 pol_snp <- left_join(pols,snp,by = c("year", "month"))
 pol_snp_unemp <- left_join(pol_snp,unemployment,by = c("year", "month"))
 ```
 
+* The "pols-month" dataset contains 9 variables concerning whether the president
+was republican or democratic and the number of governors,senators and representatives
+who are democratic or republican from Jan 1974 to June 2015.
+ 
+* In "snp" dataset, the closing value of the S&P stock index and its associated date are both included. 
 
-Write a short paragraph about these datasets. Explain briefly what each dataset contained, and describe the resulting dataset (e.g. give the dimension, range of years, and names of key variables).
+* The "unemployment" dataset records the percentage of unemployment in each month from 1948 to 2015.
+
+```{r, results="hide", echo=FALSE}
+skimr::skim(pol_snp_unemp)
+```
+
+* The resulting dataset has a 822 x 11 dimension, namely 822 obervations and 11 variables. 
+It covers data on some key variables, including "president","gov_dem","rep_dem","rep_gop","sen_dem","sen_gop","close" and "umemployment_%"** from year of **1947** to **2015**. 
 
 
 # Problem 3
 ## Load and tidy the data
 ```{r}
+
 baby_name <- 
         read_csv("./data/Popular_Baby_Names.csv") %>% 
         janitor::clean_names() %>% 
@@ -126,7 +126,7 @@ baby_name <-
 ```
 
 
-## Creat table for "¡°Olivia¡±
+## Creat table for "Olivia"
 ```{r, message = FALSE}
 pop_olivia <- 
         baby_name %>% 
@@ -135,15 +135,8 @@ pop_olivia <-
         pivot_wider(names_from = year_of_birth, values_from = rank ) %>% 
         select("ethnicity","2011","2012","2013","2014","2015","2016")
 knitr::kable(pop_olivia) 
-
-
-# Finally, for male, white non-hispanic children born in 2016, produce a scatter plot showing the number of children with a name (y axis) against the rank in popularity of that name (x axis).
-
-
 ```
 
-
-Finally, for male, white non-hispanic children born in 2016, produce a scatter plot showing the number of children with a name (y axis) against the rank in popularity of that name (x axis).
 
 ## The most popular name among male children over time.
 ```{r}
@@ -156,7 +149,7 @@ pop_male_name <-
 knitr::kable(pop_male_name) 
 ```
 
-## A scatter plot 
+## Scatter plot--rank and count of male names in white non-hispanic children
 ```{r, fig.height = 6, fig.width=6}
 baby_name %>%
         filter(gender == "Male" & year_of_birth == 2016 & ethnicity == "White non hisp") %>% 
@@ -165,8 +158,5 @@ baby_name %>%
         geom_text(aes(label = childs_first_name),hjust = 0, vjust = 0,size = 3) +
         labs(title = "Rank and count of male names in white non-hispanic children") +
         theme(plot.title = element_text(hjust = 0.5))
-         
-         
-
 ```
 
