--- a/p8105_hw2_xj2249.md
+++ b/p8105_hw2_xj2249.md
@@ -42,24 +42,19 @@ pct_17_18 <-
         mutate(month = month.name[month])
 ```
 
-Write a paragraph about these data; you are encouraged to use inline R.
-
-Be sure to note the number of observations in both resulting datasets,
-and give examples of key variables.
-
-What was the median number of sports balls in a dumpster in 2017? done
-
-The median number of sports balls in a dumpster in 2017 is 8
-
-## Mr. Trash Wheel dataset
-
-In Mr. Trash Wheel dataset, there are ‘285’ observations.
-
-In precipitation(2017-2018) dataset, there are 19 observations, with 3
-variables, indicating the total precipitation data for 19 months in 2017
-and 2018. The total precipitation in 2017 and 2018 are 32.93 and 23.5
-respectively. Besides, the average precipitation in 2017 and 2018 are
-2.74 and 3.36 respectively.
+  - In “Mr. Trash Wheel” dataset, there are 285 observations, embodying
+    information on the dumpter number, date of collection, amount of
+    total litter and litter type.
+  - It contains information of 285 dumpsters dating from 2014 to 2018.
+    The average litter weight and volume are 3.33 tons/year and 15 cubic
+    yards/year.
+  - And the median number of sports balls in a dumpster in 2017 is 8.
+  - In “precipitation(2017-2018)” dataset, there are 19 observations,
+    with 3 variables, showing the total precipitation data for 19 months
+    in 2017 and 2018.
+  - The total precipitation in 2017 and 2018 are 32.93 and 23.5
+    respectively. Besides, the average precipitation in 2017 and 2018
+    are 2.74 and 3.36 respectively.
 
 # Problem 2
 
@@ -85,11 +80,7 @@ snp <-
         mutate(month = month.name[month])
 ```
 
-## Third, tidy the unemployment data
-
-This process will involve switching from ???wide??? to ???long???
-format; ensuring that key variables have the same name; and ensuring
-that key variables take the same values.
+## Third, tidy the unemployment data.
 
 ``` r
 unemployment <- 
@@ -99,16 +90,29 @@ unemployment <-
         mutate(month = month.name[match(month,tolower(month.abb))])
 ```
 
-## Join the datasets by merging snp into pols, and merging unemployment into the result.
+## Finally, join the datasets.
 
 ``` r
 pol_snp <- left_join(pols,snp,by = c("year", "month"))
 pol_snp_unemp <- left_join(pol_snp,unemployment,by = c("year", "month"))
 ```
 
-Write a short paragraph about these datasets. Explain briefly what each
-dataset contained, and describe the resulting dataset (e.g. give the
-dimension, range of years, and names of key variables).
+  - The “pols-month” dataset contains 9 variables concerning whether the
+    president was republican or democratic and the number of
+    governors,senators and representatives who are democratic or
+    republican from Jan 1974 to June 2015.
+
+  - In “snp” dataset, the closing value of the S\&P stock index and its
+    associated date are both included.
+
+  - The “unemployment” dataset records the percentage of unemployment in
+    each month from 1948 to 2015.
+
+  - The resulting dataset has a 822 x 11 dimension, namely 822
+    obervations and 11 variables. It covers data on some key variables,
+    including
+    “president”,“gov\_dem”,“rep\_dem”,“rep\_gop”,“sen\_dem”,“sen\_gop”,“close”
+    and “umemployment\_%”\*\* from year of **1947** to **2015**.
 
 # Problem 3
 
@@ -138,7 +142,7 @@ baby_name <-
     ##   Rank = col_double()
     ## )
 
-## Creat table for ““Olivia”
+## Creat table for “Olivia”
 
 ``` r
 pop_olivia <- 
@@ -156,14 +160,6 @@ knitr::kable(pop_olivia)
 | Black non hisp |   10 |    8 |    6 |    8 |    4 |    8 |
 | Hispanic       |   18 |   22 |   22 |   16 |   16 |   13 |
 | White non hisp |    2 |    4 |    1 |    1 |    1 |    1 |
-
-``` r
-# Finally, for male, white non-hispanic children born in 2016, produce a scatter plot showing the number of children with a name (y axis) against the rank in popularity of that name (x axis).
-```
-
-Finally, for male, white non-hispanic children born in 2016, produce a
-scatter plot showing the number of children with a name (y axis) against
-the rank in popularity of that name (x axis).
 
 ## The most popular name among male children over time.
 
@@ -184,7 +180,7 @@ knitr::kable(pop_male_name)
 | Hispanic       | Jayden  | Jayden | Jayden | Liam   | Liam   | Liam   |
 | White non hisp | Michael | Joseph | David  | Joseph | David  | Joseph |
 
-## A scatter plot
+## Scatter plot–rank and count of male names in white non-hispanic children
 
 ``` r
 baby_name %>%
@@ -196,4 +192,4 @@ baby_name %>%
         theme(plot.title = element_text(hjust = 0.5))
 ```
 
-![](p8105_hw2_xj2249_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+![](p8105_hw2_xj2249_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
