--- a/p8105_hw2_xj2249.Rmd
+++ b/p8105_hw2_xj2249.Rmd
@@ -43,7 +43,7 @@ pct_17_18 <-
 ```
 
 
-```{r, results="hide", echo=FALSE}
+```{r, include = FALSE }
 skimr::skim(mr_trash)
 ```
 * In "Mr. Trash Wheel" dataset, there are 285 observations, embodying information on the dumpter number, date of collection, amount of total litter and litter type.
@@ -100,7 +100,7 @@ who are democratic or republican from Jan 1974 to June 2015.
 
 * The "unemployment" dataset records the percentage of unemployment in each month from 1948 to 2015.
 
-```{r, results="hide", echo=FALSE}
+```{r, include = FALSE }
 skimr::skim(pol_snp_unemp)
 ```
 
