--- a/p8105_hw2_xj2249.md
+++ b/p8105_hw2_xj2249.md
@@ -9,10 +9,11 @@ jx2249
 
 ``` r
 library(tidyverse)
+library(kableExtra)
 mr_trash <- 
-        readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
+        readxl::read_excel("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", 
                                sheet = "Mr. Trash Wheel",
-                               range = "A2:N336") %>% 
+                               range = "A2:N406") %>% 
         janitor::clean_names() %>% 
         drop_na(dumpster) %>% 
         mutate(sports_balls = as.integer(sports_balls))
@@ -22,7 +23,7 @@ mr_trash <-
 
 ``` r
 pct_18 <- 
-        readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
+        readxl::read_excel("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", 
                              sheet = "2018 Precipitation",
                              range = "A2:B14") %>% 
         janitor::clean_names() %>% 
@@ -30,7 +31,7 @@ pct_18 <-
         mutate(year = "2018")
 
 pct_17 <- 
-        readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
+        readxl::read_excel("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", 
                              sheet = "2017 Precipitation",
                              range = "A2:B14") %>% 
         janitor::clean_names() %>% 
@@ -42,19 +43,23 @@ pct_17_18 <-
         mutate(month = month.name[month])
 ```
 
-  - In “Mr. Trash Wheel” dataset, there are 285 observations, embodying
+  - In “Mr. Trash Wheel” dataset, there are 344 observations, containing
     information on the dumpter number, date of collection, amount of
     total litter and litter type.
-  - It contains information of 285 dumpsters dating from 2014 to 2018.
-    The average litter weight and volume are 3.33 tons/year and 15 cubic
-    yards/year.
+
+  - It contains information of 344 dumpsters dating from 2014 to 2019.
+    The average litter weight and volume are 3.26 tons/year and 15.54
+    cubic yards/year.
+
   - And the median number of sports balls in a dumpster in 2017 is 8.
-  - In “precipitation(2017-2018)” dataset, there are 19 observations,
-    with 3 variables, showing the total precipitation data for 19 months
-    in 2017 and 2018.
-  - The total precipitation in 2017 and 2018 are 32.93 and 23.5
+
+  - In “precipitation(2017-2018)” dataset, there are 24 observations,
+    with 3 variables, showing the total precipitation data for each
+    month in 2017 and 2018.
+
+  - The total precipitation in 2017 and 2018 are 32.93 and 70.33
     respectively. Besides, the average precipitation in 2017 and 2018
-    are 2.74 and 3.36 respectively.
+    are 2.74 and 5.86 respectively.
 
 # Problem 2
 
@@ -99,7 +104,7 @@ pol_snp_unemp <- left_join(pol_snp,unemployment,by = c("year", "month"))
 
   - The “pols-month” dataset contains 9 variables concerning whether the
     president was republican or democratic and the number of
-    governors,senators and representatives who are democratic or
+    governors,senators and representatives who were democratic or
     republican from Jan 1974 to June 2015.
 
   - In “snp” dataset, the closing value of the S\&P stock index and its
@@ -108,11 +113,11 @@ pol_snp_unemp <- left_join(pol_snp,unemployment,by = c("year", "month"))
   - The “unemployment” dataset records the percentage of unemployment in
     each month from 1948 to 2015.
 
-  - The resulting dataset has a 822 x 11 dimension, namely 822
+  - The resulting dataset has a **822 x 11 dimension**, namely 822
     obervations and 11 variables. It covers data on some key variables,
     including
-    “president”,“gov\_dem”,“rep\_dem”,“rep\_gop”,“sen\_dem”,“sen\_gop”,“close”
-    and “umemployment\_%”\*\* from year of **1947** to **2015**.
+    **“president”,“gov\_dem”,“rep\_dem”,“rep\_gop”,“sen\_dem”,“sen\_gop”,“close”
+    and “umemployment\_%”** from year of **1947** to **2015**.
 
 # Problem 3
 
@@ -123,9 +128,13 @@ baby_name <-
         read_csv("./data/Popular_Baby_Names.csv") %>% 
         janitor::clean_names() %>% 
         mutate(childs_first_name = str_to_title(childs_first_name),
-               ethnicity = str_to_sentence(recode(ethnicity, "ASIAN AND PACIFIC ISLANDER" = "ASIAN AND PACI",
-                                                                "BLACK NON HISPANIC" = "BLACK NON HISP",
-                                                                        "WHITE NON HISPANIC" = "WHITE NON HISP")),
+               ethnicity = str_to_sentence(
+                       recode(ethnicity, 
+                              "ASIAN AND PACIFIC ISLANDER" = "ASIAN AND PACI",
+                              "BLACK NON HISPANIC" = "BLACK NON HISP",
+                              "WHITE NON HISPANIC" = "WHITE NON HISP"
+                              )
+                                           ),
                gender = str_to_title(gender)
                ) %>% 
         distinct(.keep_all = TRUE) %>% 
@@ -151,15 +160,259 @@ pop_olivia <-
         select("year_of_birth","ethnicity","rank") %>% 
         pivot_wider(names_from = year_of_birth, values_from = rank ) %>% 
         select("ethnicity","2011","2012","2013","2014","2015","2016")
-knitr::kable(pop_olivia) 
+
+kable(pop_olivia, 
+      caption = "Rank in popularity of 'Olivia' as a female baby name over time"
+      )
 ```
 
-| ethnicity      | 2011 | 2012 | 2013 | 2014 | 2015 | 2016 |
-| :------------- | ---: | ---: | ---: | ---: | ---: | ---: |
-| Asian and paci |    4 |    3 |    3 |    1 |    1 |    1 |
-| Black non hisp |   10 |    8 |    6 |    8 |    4 |    8 |
-| Hispanic       |   18 |   22 |   22 |   16 |   16 |   13 |
-| White non hisp |    2 |    4 |    1 |    1 |    1 |    1 |
+<table>
+
+<caption>
+
+Rank in popularity of ‘Olivia’ as a female baby name over time
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+ethnicity
+
+</th>
+
+<th style="text-align:right;">
+
+2011
+
+</th>
+
+<th style="text-align:right;">
+
+2012
+
+</th>
+
+<th style="text-align:right;">
+
+2013
+
+</th>
+
+<th style="text-align:right;">
+
+2014
+
+</th>
+
+<th style="text-align:right;">
+
+2015
+
+</th>
+
+<th style="text-align:right;">
+
+2016
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+Asian and paci
+
+</td>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Black non hisp
+
+</td>
+
+<td style="text-align:right;">
+
+10
+
+</td>
+
+<td style="text-align:right;">
+
+8
+
+</td>
+
+<td style="text-align:right;">
+
+6
+
+</td>
+
+<td style="text-align:right;">
+
+8
+
+</td>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:right;">
+
+8
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Hispanic
+
+</td>
+
+<td style="text-align:right;">
+
+18
+
+</td>
+
+<td style="text-align:right;">
+
+22
+
+</td>
+
+<td style="text-align:right;">
+
+22
+
+</td>
+
+<td style="text-align:right;">
+
+16
+
+</td>
+
+<td style="text-align:right;">
+
+16
+
+</td>
+
+<td style="text-align:right;">
+
+13
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+White non hisp
+
+</td>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
 
 ## The most popular name among male children over time.
 
@@ -170,15 +423,258 @@ pop_male_name <-
         select(year_of_birth, ethnicity, childs_first_name) %>% 
         pivot_wider(names_from = year_of_birth, values_from = childs_first_name ) %>% 
         select("ethnicity","2011","2012","2013","2014","2015","2016") 
-knitr::kable(pop_male_name) 
+kable(pop_male_name,
+      caption = "The most popular name among male children over time")
 ```
 
-| ethnicity      | 2011    | 2012   | 2013   | 2014   | 2015   | 2016   |
-| :------------- | :------ | :----- | :----- | :----- | :----- | :----- |
-| Asian and paci | Ethan   | Ryan   | Jayden | Jayden | Jayden | Ethan  |
-| Black non hisp | Jayden  | Jayden | Ethan  | Ethan  | Noah   | Noah   |
-| Hispanic       | Jayden  | Jayden | Jayden | Liam   | Liam   | Liam   |
-| White non hisp | Michael | Joseph | David  | Joseph | David  | Joseph |
+<table>
+
+<caption>
+
+The most popular name among male children over time
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+ethnicity
+
+</th>
+
+<th style="text-align:left;">
+
+2011
+
+</th>
+
+<th style="text-align:left;">
+
+2012
+
+</th>
+
+<th style="text-align:left;">
+
+2013
+
+</th>
+
+<th style="text-align:left;">
+
+2014
+
+</th>
+
+<th style="text-align:left;">
+
+2015
+
+</th>
+
+<th style="text-align:left;">
+
+2016
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+Asian and paci
+
+</td>
+
+<td style="text-align:left;">
+
+Ethan
+
+</td>
+
+<td style="text-align:left;">
+
+Ryan
+
+</td>
+
+<td style="text-align:left;">
+
+Jayden
+
+</td>
+
+<td style="text-align:left;">
+
+Jayden
+
+</td>
+
+<td style="text-align:left;">
+
+Jayden
+
+</td>
+
+<td style="text-align:left;">
+
+Ethan
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Black non hisp
+
+</td>
+
+<td style="text-align:left;">
+
+Jayden
+
+</td>
+
+<td style="text-align:left;">
+
+Jayden
+
+</td>
+
+<td style="text-align:left;">
+
+Ethan
+
+</td>
+
+<td style="text-align:left;">
+
+Ethan
+
+</td>
+
+<td style="text-align:left;">
+
+Noah
+
+</td>
+
+<td style="text-align:left;">
+
+Noah
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Hispanic
+
+</td>
+
+<td style="text-align:left;">
+
+Jayden
+
+</td>
+
+<td style="text-align:left;">
+
+Jayden
+
+</td>
+
+<td style="text-align:left;">
+
+Jayden
+
+</td>
+
+<td style="text-align:left;">
+
+Liam
+
+</td>
+
+<td style="text-align:left;">
+
+Liam
+
+</td>
+
+<td style="text-align:left;">
+
+Liam
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+White non
+hisp
+
+</td>
+
+<td style="text-align:left;">
+
+Michael
+
+</td>
+
+<td style="text-align:left;">
+
+Joseph
+
+</td>
+
+<td style="text-align:left;">
+
+David
+
+</td>
+
+<td style="text-align:left;">
+
+Joseph
+
+</td>
+
+<td style="text-align:left;">
+
+David
+
+</td>
+
+<td style="text-align:left;">
+
+Joseph
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
 
 ## Scatter plot–rank and count of male names in white non-hispanic children
 
